--- a/chatapp/templates/home.html
+++ b/chatapp/templates/home.html
@@ -1,17 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
+    <meta name="view-port" content = "width=device-width, inital-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Chat App</title>
     <style>
         .container{
             display: grid;
             grid-template-columns: 10% auto;
         }
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: rgb(78, 75, 75);
+        }
+        .recent-chats, .opened-chat, .all-friend-list{
+            height: 85vh;
+            border: 3px inset white;
+            overflow: auto;
+        }
+        .opened-chat{
+            width: 25%;
+        }
+        .chat, .friend {
+            width: 100%;
+            border: 1px solid gray;
+        }
+        .chat > div > p {
+            margin: 0;
+        }
+        .chat .chat-name,.chat .chat-msg {
+            padding-left: 15px;
+            overflow: hidden;
+            
+        }
+        .chat .chat-time {
+            position: relative;
+            right: 0;
+            width: 100%;
+            
+        } 
+        .chat-now {display: none;}
+        .chat-now .chat-header{
+            line-height: 0;
+            position: relative;            
+        }
+        .chat-now-active-status {
+            font-size: 14px;
+        }
+        .chat-now-close {
+            color: gray;
+            position: absolute;top:12px;right:12px;
+        }
+        .chat-now-close:hover {
+            color: white;
+        }
+        @media screen and (max-width: 768px){
+            .recent-chats{
+                width: 100%;
+                border: 2px inset white;
+            }
+            .opened-chat, .all-friend-list{
+                display: none;
+            }
+        }
+        @media screen and (min-width: 768.1px) and (max-width: 992px){
+            .recent-chats{
+                width: 40%;
+                border: 2px inset white;
+            
+            }.opened-chat {
+                width: 60%;
+            }
+            .recent-chats, .opened-chat {
+                display: block;
+            }
+            .all-friend-list{
+                display: none;
+            }
+            #recent-chats {
+                display: none;
+            }
+            
+        }
+        @media screen and (min-width: 992.1px){
+            #friends, #recent-chats {display:none;}
+            .recent-chats, .opened-chat, .all-friend-list {
+                display: block;
+            }
+        }
+
     </style>
 </head>
 <body>
-    {% if logged_in %}
+    <!-- {% if logged_in %}
     <p>Welcome!<span><h1>{{ request.user.first_name }} {{ request.user.last_name }}</h1></span></p>
     <div class="container-1">
         <table border="0">
@@ -34,6 +121,246 @@
     <a href="{% url 'logout' %}"><h1>Logout</h1></a>
     {% else %}
         <p>Please login<a href="{% url 'login_page' %}">Login here</a></p>
-    {% endif %}
+    {% endif %} -->
+
+
+
+    <nav class="nav justify-content-center bg-dark text-white p-3">
+        <h3>Hello, {{ request.user.first_name }} {{ request.user.last_name }}</h3>
+        <div class="ml-5">
+            <ul class="nav nav-bar">
+                <li class="nav-item ">
+                    <a class="nav-link active" id="recent-chats" href="#recent-chats">Recent Chats</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" id="friends" href="#friends">Friends</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="{% url 'logout' %}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="main d-flex justify-content-center align-items-center m-4">
+        <!--Recent Chats-->
+        <section class="recent-chats flex-fill m-2 text-white">
+            <h5 class="p-3">Recent chats</h5>
+            <div id="6"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Bikash Shrestha</p>
+                    <p class="text-muted"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+
+            <div id="1"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Stha Bikash</p>
+                    <p class="text-muted"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+            <div id="2"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Bikash</p>
+                    <p class="text-white"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+            <div id="3"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Full Name</p>
+                    <p class="text-muted"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+            <div id="4"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Full Name</p>
+                    <p class="text-muted"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+            <div id="5"class="d-flex align-items-center chat p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="chat-name">Full Name</p>
+                    <p class="text-muted"><span class="chat-msg" style="display:inline-block;width:70%;">message goes here</span><span style="display:inline-block; width: 30%;" class="chat-time text-right">12:03 pm</span></p>
+                </div>
+            </div>
+
+
+        </section>
+
+        <!--Currently Opened Chat-->
+        <section class="opened-chat flex-fill m-2 text-white">
+            <div class="chat-now"> 
+                <div class="chat-header">
+                    <h5 class="p-2 m-0">Friend Name</h5>
+                    <p class="pl-2 text-muted m-0 chat-now-active-status">active staus</p>
+                    <span class="chat-now-close">X</span>
+                    <hr/>
+                </div>
+                <div class="chat-body p-1">
+                    <p>chat content goes here...</p>
+                </div>
+            </div>
+            <div class="chat-not-selected text-muted display-4 text-center"
+                    style="position: relative;padding-top:190px">
+                <p class="">Select chat to open here</p>
+            </div>
+        </section>
+        
+        <!--All Friends List-->
+        <section  class="all-friend-list  flex-fill m-2 text-white">
+            <h5 class="p-3">Friends</h5>
+            {% for frn in users %}
+            <div class="d-flex align-items-center friend p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="friend-name">{{ frn.username }}</p>
+                </div>
+            </div>
+            {% endfor %}
+            <div class="d-flex align-items-center friend p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="friend-name">Friend 1</p>
+                </div>
+            </div>
+
+
+            <div class="d-flex align-items-center friend p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="friend-name">Friend 2</p>
+                </div>
+            </div>
+            <div class="d-flex align-items-center friend p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="friend-name">Friend-3</p>
+                </div>
+            </div>
+            <div class="d-flex align-items-center friend p-2">
+                <img src="{% static 'images/user.png' %}" class="rounded-circle" width="50" height="50" style="border: 1px inset blue" alt=""/>
+                <div class="container-fluid">
+                    <p class="friend-name">Friend-5</p>
+                </div>
+            </div>
+
+
+
+        </section>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
+    <script>
+        $(document).ready(function(){
+            $('.chat').click(function(){
+                var name = $(this).find('.chat-name').html();
+                console.log(name);
+                if(innerWidth < 768){
+                    $('.recent-chats').css('display', 'none');
+                    $('.chat-not-selected').css('display', 'none');
+                    $('.chat-now').css('display','block');
+                    $('.chat-now .chat-header h5').text(name);
+                    $('.opened-chat').css('display', 'block');
+                }
+                else{
+                    $('.chat-not-selected').css('display', 'none');
+                    $('.chat-now').css('display','block');
+                    $('.chat-now .chat-header h5').text(name);
+                    $('.opened-chat').css('display', 'block');
+
+                }
+             });
+            
+            $('.friend').click(function(){
+                if( innerWidth < 768){
+                    //$('.c').css('display', 'none');
+                    $('.opened-chat').show();
+                    $('.chat-now').css('display','block');
+                    $('.chat-now .chat-header h5').text($(this).find(".friend-name").text());
+                    //$('.opened-chat').css('display', 'block');
+                    $('.all-friend-list').hide();
+                    $('#friends').show();
+                }else{
+                    $('.chat-not-selected').css('display', 'none');
+                $('.chat-now').css('display','block');
+                $('.chat-now .chat-header h5').text($(this).find(".friend-name").text());
+                $(this).css('display', 'none');
+                //$('.opened-chat').css('display', 'block');
+                }
+                
+            });
+            
+            //show friend list
+            $('#friends').click(function(){
+                if(window.innerWidth < 768 ){
+                    $('.all-friend-list').css('display', 'block');
+                    $('.recent-chats').css('display', 'none');
+                    $('.opened-chat').css('display', 'none');
+                    $('#recent-chats').css('display', 'block');
+                    $(this).css('display','none');
+                }else{
+                    $('.all-friend-list').css('display', 'block');
+                    $('.recent-chats').css('display', 'none');
+                    $('.opened-chat').css('display', 'bloxk');
+                    $('#recent-chats').css('display', 'block');
+                    $(this).hide();
+                }
+                
+             });
+            //show recent-chat
+            $('#recent-chats').click(function(){
+                if (window.innerWidth < 768){
+                    $('.all-friend-list').css('display', 'none');
+                    $('.recent-chats').css('display', 'block');
+                    $('#friends').css('display', 'block');
+                    $('.opened-chat').css('display', 'none');
+                    $(this).css('display','none');
+                }else{
+                    $('.all-friend-list').css('display', 'none');
+                    $('.recent-chats').css('display', 'block');
+                    $('#friends').css('display', 'block');
+                    $('.opened-chat').css('display', 'block');
+                    $(this).css('display','none');
+                }
+
+            });
+            window.onresize = function(){
+                if(innerWidth >992 ){
+                    $('.recent-chats').show();
+                    $('.opened-chat').show();
+                    $('.all-friend-list').show();
+                }
+                else if(innerWidth > 768 && innerWidth < 576){
+                    $('.recent-chats').show();
+                    $('.opened-chat').show();
+                    $('.all-friend-list').hide();
+                }
+                else{
+                    $('.recent-chats').show();
+                    $('.opened-chat').hide();
+                    $('.all-friend-list').hide()
+                }
+            }
+        });
+        var closBtn = document.querySelector(".chat-now-close");
+        closBtn.addEventListener('click', function(){
+            document.querySelector(".chat-now").style.display = "none";
+            if(innerWidth < 768 ){
+                $('.opened-chat').hide();
+                $('.recent-chats').show();
+            }else{
+                $('.chat-not-selected').css('display', 'block');
+            }
+        })
+    </script>
 </body>
 </html>
